# scp-jp-management-bot

./: Makefile  README.md  compose.dev.yml  compose.prod.yml  compose.stg.yml  compose.test.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check_healthy.yml  ci.yml  deploy.yml
app/: main.py
app/cogs/: admin.py  cog_manager.py  health_monitor.py  linker.py  member_management.py  privilege_management.py  role_group.py  staff_request.py  template.py
app/core/: __init__.py  config.py
app/db/: __init__.py  connection.py
app/db/crud/: base.py
app/db/models/: __init__.py
app/db/models/linker/: __init__.py  guild.py  (+2 more)
app/ui/views/: member_management.py  privilege_management.py  staff_request.py  template.py
app/utils/: __init__.py  discord.py  panopticon_client.py  session.py  temporary_memory.py
db/: dumper.Dockerfile  migrator.Dockerfile
db/migrations/versions/: 20241202160923_5227ad4f39d3_init.py  20241202162004_16cc596f1f48_fix_column.py  20250206195925_38d7f9cda15c_add_autonick.py
db/package/: models.py
db/package/crud/: note.py
discord/: Dockerfile  bot.py  newrelic.ini
discord/cogs/: CogManager.py  Linker.py
discord/config/: bot_config.py
discord/util/: healthcheck.py
docker/: app.Dockerfile
envs/: aws-s3.env.example  db.env.example  discord.env.example
versions/: 20241202160923_5227ad4f39d3_init.py  20241202162004_16cc596f1f48_fix_column.py  20250320135327_947717d39848_add_member_management.py  20250324232720_9dcb9bf51b37_add_staff_approval_management.py  20250324233219_5fc6c87cf723_add_due_date_for_apprival.py  20250325031638_3509b45b7bc7_add_staff_request.py  20250325041548_fa238d6e3a00_add_due_date_notify.py  20250325184140_b936940374de_add_privilege_management.py  20250325200204_d8350fce699f_add_privilege_management.py  20250920232343_a7f563ecdbc1_add_role_group_tables.py  20260103211832_780b5a5101cb_migrate_to_panopticon.py
(+14 files in other folders)
