[tool.poetry]
name = "linker-bot"
version = "1.0.0"
description = "A template for creating a new application"
authors = ["Yuki Watanabe <ukwhatn@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.discord]
optional = true
[tool.poetry.group.discord.dependencies]
sentry-sdk = "^2.13.0"
py-cord = {extras = ["speed"], version = "^2.6.1"}
newrelic = "^10.3.1"
httpx = "^0.28.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[tool.poetry.group.db]
optional = true
[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"

[tool.poetry.group.dumper]
optional = true
[tool.poetry.group.dumper.dependencies]
boto3 = "1.37.*"
schedule = "^1.2.2"
sentry-sdk = "^2.19.2"
pick = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"