[tool.poetry]
name = "scp-jp-management-bot"
version = "1.0.0"
description = "A template for creating a new discordbot"
authors = ["Yuki Watanabe <ukwhatn@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"

[tool.poetry.group.discord]
optional = true
[tool.poetry.group.discord.dependencies]
py-cord = { extras = ["speed"], version = "^2.6.1" }
redis = "^6.1.0"
sentry-sdk = "^2.13.0"
psutil = "^7.0.0"
scp-jp-utils = "^1.2.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
bandit = "^1.7.8"
semgrep = "^1.63.0"

[tool.poetry.group.db]
optional = true
[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"